--- a/week3/redactionist/index.html
+++ b/week3/redactionist/index.html
@@ -15,17 +15,20 @@
   src="https://code.jquery.com/jquery-3.4.1.min.js"
   integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
   crossorigin="anonymous"></script>
-  
+
     <script src="js/script.js"></script>
 
 
   </head>
 
   <body>
-  <p>Lorem Ipsum is <span class="redacted">simply dummy text of the printing and typesetting industry.</span> Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
-  <p>It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. <span class="redacted">It was popularised in the 1960s with the release</span></p>
+  <p>Lorem Ipsum is <span class="redacted">simply dummy text of the printing and typesetting industry.</span> Lorem Ipsum has been the industry's standard dummy text ever since the <span class="secret">1500s</span>, when an unknown printer took a galley of type and scrambled it to make a type <span class="secret">specimen book.</span> </p>
+  <p>It has survived not only five centuries, <span class="secret">but also the leap</span> into electronic typesetting, remaining essentially unchanged. <span class="redacted">It was popularised in the 1960s with the release</span></p>
   <p><span class="redacted">Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing</span> software like Aldus PageMaker including versions of Lorem Ipsum.</p>
-  <p>Contrary to popular belief, <span class="redacted">Lorem Ipsum is not simply random text.</span> It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old.</p>
+  <p>Contrary to popular belief, <span class="redacted">Lorem Ipsum is not simply random text.</span> It has roots in a piece of classical <span class="secret">Latin literature</span> from 45 BC, making it over 2000 years old.</p>
+
+  <p>
+    Total Secrets found:</p><div id="foundSecrets"></div>
 
   </body>
 
