--- a/projects/project1/index.html
+++ b/projects/project1/index.html
@@ -32,23 +32,25 @@
   <!-- <p>Lorem Ipsum is <span class="redacted">simply dummy text of the printing and typesetting industry.</span> Lorem Ipsum has been the industry's standard dummy text ever since the <span class="secret">1500s</span>, when an unknown printer took a galley of type and scrambled it to make a type <span class="secret">specimen book.</span> </p>
   <p>It has survived not only five centuries, <span class="secret">but also the leap</span> into electronic typesetting, remaining essentially unchanged. <span class="redacted">It was popularised in the 1960s with the release</span></p> -->
   <h1>The Myth Of Sisyphus</h1>
-
+  <p>
+    This poem resets in <span id="time">00:30</span>
+  </p>
   <p>
     There is but one truly serious <span class="secret">philosophical</span> problem, and that
 is <span class="secret">suicide</span>. Judging whether life is or is not worth living amounts to
 answering the <span class="secret">fundamental</span> question of philosophy.
     All the rest—
-whether or not the world has three dimensions, whether the mind
+whether or not the world has <span class="secret">three dimensions</span>, whether the mind
 has nine or twelve categories—comes afterwards. These are
 games; one must first answer.
-    And if it is true, as Nietzsche claims,
+    And if it is true, as <span class="secret">Nietzsche claims</span>,
 that a philosopher, to deserve our respect, must preach by example,
 you can appreciate the importance of that reply, for it will precede
 the definitive act.
 These are facts the heart can feel; yet they call
-for careful study before they become clear to the intellect.
+for careful study before they become clear to the <span class="secret">intellect</span>.
   </p>
-  <p>Total Secrets found:<span id="foundSecrets"></span>/6</p>
+  <p>Annoying words found:<span id="foundSecrets"></span>/6</p>
 
   </body>
 
