--- a/projects/project1/index.html
+++ b/projects/project1/index.html
@@ -32,8 +32,7 @@
   <!-- <p>Lorem Ipsum is <span class="redacted">simply dummy text of the printing and typesetting industry.</span> Lorem Ipsum has been the industry's standard dummy text ever since the <span class="secret">1500s</span>, when an unknown printer took a galley of type and scrambled it to make a type <span class="secret">specimen book.</span> </p>
   <p>It has survived not only five centuries, <span class="secret">but also the leap</span> into electronic typesetting, remaining essentially unchanged. <span class="redacted">It was popularised in the 1960s with the release</span></p> -->
   <h1>The Myth Of Sisyphus</h1>
-
-  <img class="fire" src="assets/images/fire.png" width="130px" height="130px"/>
+  <img src="assets/images/fire.png" width="130px" height="130px"/>
   <p>
     This poem resets in <span id="time">00:30</span>
   </p>
