changed some game rules

--- a/projects/project1/index.html
+++ b/projects/project1/index.html
@@ -51,7 +51,7 @@ the <span class="secret">definitive</span> act.
 These are <span class="secret">facts</span> the <span class="secret">heart</span> can feel; yet they call
 for careful study before they become clear to the <span class="secret">intellect</span>.
   </p>
-  <p>Annoying words found:<span id="foundSecrets"></span>/6</p>
+  <p>Annoying words deleted:<span id="foundSecrets"></span>/13</p>
 
   </body>
 
