Added instructions to the game

--- a/projects/project1/index.html
+++ b/projects/project1/index.html
@@ -33,6 +33,9 @@
   <p>It has survived not only five centuries, <span class="secret">but also the leap</span> into electronic typesetting, remaining essentially unchanged. <span class="redacted">It was popularised in the 1960s with the release</span></p> -->
   <h1>The Myth Of Sisyphus</h1>
   <p>
+    "Burn" as many paradoxical words as you can find..... Or remain here forever.
+  </p>
+  <p>
     Paradox event in: <span id="time">00:30</span>
   </p>
   <img src="assets/images/fire.png" width="130px" height="130px"/>
