--- a/week6/index.html
+++ b/week6/index.html
@@ -21,6 +21,8 @@
 
   <script src='https://code.responsivevoice.org/responsivevoice.js'></script>
 
+  <script src="//cdnjs.cloudflare.com/ajax/libs/annyang/2.6.0/annyang.min.js"></script>
+  
   <!-- My script(s) -->
   <script src="js/script.js"></script>
 </head>
