added annyang voice command, sub button, and credit card array on click

--- a/projects/project2/index.html
+++ b/projects/project2/index.html
@@ -16,24 +16,18 @@
       integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
       crossorigin="anonymous"></script>
 
-    <link rel="stylesheet" type="text/css" href="https://code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css" />
-
-    <script
-    src="https://code.jquery.com/ui/1.12.1/jquery-ui.min.js"
-    integrity="sha256-VazP97ZCwtekAsvgPBSUwPFKdrwD3unUfSGVYrahUqU="
-    crossorigin="anonymous"></script>
+    <script src="https://code.responsivevoice.org/responsivevoice.js"></script>
+    <script src="//cdnjs.cloudflare.com/ajax/libs/annyang/2.6.0/annyang.min.js"></script>
 
     <script src="js/script.js"></script>
-
-
   </head>
 
   <body>
   <h1>GLITCH TV</h1>
-  <img src="assets/images/subscribe.png" width="100px" height="100px" alt="">
+  <img src="assets/images/subscribe.png" width="250px" height="250px" alt="" id="subscribed">
 
   <p>
-    Support our proud  ̶s̶l̶a̶v̶e̶s̶ streamers!!!111 SUBSCRIBE NOW!!!11!!!!!
+    Our dedicated s̶l̶a̶v̶e̶s̶ streamers are working tirelessly!!1! Want to show them some love and support!?!? SUBSCRIBE NOW!!!!
   </p>
   </body>
 
