added an animation to the credit cards, added a delete function on call

--- a/projects/project2/index.html
+++ b/projects/project2/index.html
@@ -1,34 +1,39 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0>
 
-    <!-- CSS stylesheet(s) -->
-    <link rel="stylesheet" type="text/css" href="css/style.css" />
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0>
 
-    <!-- Library script(s) -->
-    <!-- Add your required libraries here either as local files or CDN-hosted files -->
+  <!-- CSS stylesheet(s) -->
+  <link rel="stylesheet" type="text/css" href="css/style.css" />
 
-    <!-- My script(s) -->
-    <script
-      src="https://code.jquery.com/jquery-3.4.1.min.js"
-      integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
-      crossorigin="anonymous"></script>
+  <!-- Library script(s) -->
+  <!-- Add your required libraries here either as local files or CDN-hosted files -->
 
-    <script src="https://code.responsivevoice.org/responsivevoice.js"></script>
-    <script src="//cdnjs.cloudflare.com/ajax/libs/annyang/2.6.0/annyang.min.js"></script>
+  <!-- My script(s) -->
+  <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
 
-    <script src="js/script.js"></script>
-  </head>
+  <script src="https://code.responsivevoice.org/responsivevoice.js"></script>
+  <script src="//cdnjs.cloudflare.com/ajax/libs/annyang/2.6.0/annyang.min.js"></script>
 
-  <body>
+  <script src="js/script.js"></script>
+</head>
+
+<body>
   <h1>GLITCH TV</h1>
   <img src="assets/images/subscribe.png" width="250px" height="250px" alt="" id="subscribed">
 
+  <p id="hidden">
+    Wow thanks for subscribing and showing some support!1!! Say " <b>I Subscribed</b>" to give us your c̶r̶e̶d̶i̶t̶ c̶a̶r̶d̶s̶ generous donations!!
+  </p>
+  <img src="assets/images/twitch.jpg" alt="">
+  <br><br>
   <p>
     Our dedicated s̶l̶a̶v̶e̶s̶ streamers are working tirelessly!!1! Want to show them some love and support!?!? SUBSCRIBE NOW!!!!
   </p>
-  </body>
+
+
+</body>
 
 </html>
