Finishing touches on final project, as well as uploading my README

--- a/projects/project2/index.html
+++ b/projects/project2/index.html
@@ -30,7 +30,7 @@
   <img src="assets/images/twitch.jpg" alt="">
   <br><br>
   <p>
-    Our dedicated s̶l̶a̶v̶e̶s̶ streamers are working tirelessly!!1! Want to show them some love and support!?!? SUBSCRIBE NOW!!!!
+    Our dedicated s̶l̶a̶v̶e̶s̶ streamers are working tirelessly!!1! Want to show them some love and support!?!? SUBSCRIBE NOW!!!! Want to see more content from them specifically marketed to your own interests? SUBSCRIBE NOW!!1! Want your favorite streamer to do a callout for you? SUBSCRIBE NOW!1!!
   </p>
 
 
