added one final message after twitch steals your money

--- a/projects/project2/index.html
+++ b/projects/project2/index.html
@@ -27,6 +27,9 @@
   <p id="hidden">
     Wow thanks for subscribing and showing some support!1!! Say " <b>I Subscribed</b>" to give us your c̶r̶e̶d̶i̶t̶ c̶a̶r̶d̶s̶ generous donations!!
   </p>
+  <p id="tyrant">
+    You thought its all going to the streamers? THINK AGAIN, WE'LL BE TAKING THESE!!
+  </p>
   <img src="assets/images/twitch.jpg" alt="">
   <br><br>
   <p>
